--- a/src/components/Style.css
+++ b/src/components/Style.css
@@ -17,15 +17,54 @@ header{
 
 .nav .header-menu a{
     text-decoration: none;
-    font-size: 28px;
+    font-size: 20px;
     font-weight: 600;
     color: forestgreen;
-    margin-right: 10px;
+    margin-left: 16px;
 }
 
 
 .nav .header-menu a:hover{
-    text-decoration: underline;
+    color: #302e2e
+}
+
+.header-input input{
+    width: 350px;
+    height: 40px;
+    padding: 0 10px;
+    border-radius: 6px;
+    border: none;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1); ;
+}
+
+.cart-icon{
+    position: absolute;
+    top: -5;
+    right: -8;
+    background-color: red;
+    color: #fff;
+    border-radius: 50%;
+    padding: 2px 6px;
+    font-size: 12px;
+}
+
+.header-account{
+    height: auto;
+    padding: 12px;
+    border-radius: 8px;
+    background-color: #eee7a7;
+    font-size: 14px;
+}
+
+.header-account:hover{
+    opacity: 0.8;
+    cursor: pointer;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+}
+
+.header-account a{
+    text-decoration: none;
+    color: #000;
 }
 
 /* Footer */
@@ -39,7 +78,7 @@ footer{
     display: flex;
     justify-content: space-between;
     color: #fff;
-    padding: 60px 0;
+    padding: 30px 0;
 }
 
 .footer-care, .footer-loca, .footer-social, .footer-trans{
