--- a/project/src/pages/ChangePassword/ChangePassword.css
+++ b/project/src/pages/ChangePassword/ChangePassword.css
@@ -1,6 +1,17 @@
+.cpass-wrapper{
+    display: flex;
+    align-items: center;
+    margin-top: 40px;
+    gap: 100px;
+}
+
+.cpass-img img{
+    width: 400px;
+}
+
 form{
-    border: 1px solid #ccc;
     padding: 20px;
+    width: 400px;
 }
 
 form h2{
@@ -10,18 +21,32 @@ form h2{
 .input-wrapper h3{
     color: #676666;
     font-size: 16px;
+    margin-top: 20px;
 }
 
 .input-wrapper input{
     margin-bottom: 10px;
-    border: 1px solid #000;
+    border: none;
+    border-bottom: 1px solid #ccc;
     width: 100%;
     padding: 4px;
+    margin-top: 10px;
+}
+
+.input-wrapper input:focus{
+    outline: none;
 }
 
 .btn-submit-cpass{
-    font-weight: 600;
+    width: 150px;
+    background-color: #db4444;
+    border: none;
     color: #fff;
-    background: #e0cf0b;
-    border-radius: 0;
+    padding: 16px;
+    margin: 20px 0 40px;
+}
+
+.btn-submit-cpass:hover{
+    cursor: pointer;
+    background-color: #c63232;
 }
