--- a/project/src/components/PDetail/PDetail.module.css
+++ b/project/src/components/PDetail/PDetail.module.css
@@ -18,12 +18,25 @@
     width: 100px;
     height: 100px ;
     background-color: #f5f5f5;
+    cursor: pointer;
+    border: 2px solid transparent;
+    transition: all 0.2s ease;
+}
+
+.pLeft img:hover {
+    border-color: #ccc;
+}
+
+.activeThumb {
+    border: 1px solid #1890ff !important;
+    transform: scale(1.05);
 }
 
 /* PMain */
 .pMain{
     flex: 2;
 }
+
 
 .pMain img{
     background-color: #f5f5f5;
@@ -113,4 +126,39 @@
 .pRightAdd:hover{
     background-color: #565656;
     cursor: pointer;
+}
+
+.pRightTable{
+    margin-top: 20px;
+    border: 2px solid #808080;
+}
+
+.pRightTable .pRightRow:first-child{
+    border-bottom: 1px dashed #9e9e9e;
+}
+
+.pRightRow{
+    display: flex;
+    gap: 40px;
+    align-items: center;
+    padding: 20px;
+}
+
+.pRightRow span{
+    font-size: 34px;
+}
+
+.pRightRight {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.pRightRight div:first-child{
+    font-weight: 600;
+}
+
+.pRightRight div:nth-child(2){
+    font-size: 14px;
+    font-style: italic;
 }
