--- a/project/src/pages/Bill/Bill.module.css
+++ b/project/src/pages/Bill/Bill.module.css
@@ -1,15 +1,15 @@
-h1{
+.title {
     font-weight: 500;
     margin-left: 20px;
     padding-top: 40px;
 }
 
-.bill-wrapper{
+.billWrapper {
     display: flex;
     gap: 100px;
 }
 
-.bill-form input{
+.billForm input {
     width: 300px;
     margin: 6px 0 20px;
     border: none;
@@ -18,46 +18,40 @@ h1{
     border-radius: 4px;
 }
 
-.bill-form div{
+.billForm div {
     font-size: 16px;
     font-weight: 600;
 }
 
-.bill-form input:focus{
+.billForm input:focus {
     outline: none;
 }
 
-.bill-table{
+.billTable {
     width: 100%;
     border-collapse: collapse;
     margin-top: 10px;
 }
 
-.bill-table td {
+.billTable td {
     border-bottom: 1px solid #ddd;
     padding: 10px;
     text-align: left;
     padding-right: 10px;
 }
 
-/* 
-.bill-product-cell{
-    display: flex;
-    align-items: center;
-} */
-
-.bill-product-cell img{
+.billProductCell img {
     width: 50px;
 }
 
-.bill-right h3{
+.billRight h3 {
     text-align: end;
     margin-top: 20px;
     font-weight: 600;
     color: #dd0004;
 }
 
-.bill-btn{
+.billBtn {
     border: none;
     background-color: #dd4444;
     padding: 14px 20px;
@@ -70,7 +64,7 @@ h1{
     float: right;
 }
 
-.bill-btn:hover{
+.billBtn:hover {
     background-color: #be123c;
     cursor: pointer;
 }
