--- a/project/src/pages/ChangePassword/ChangePassword.module.css
+++ b/project/src/pages/ChangePassword/ChangePassword.module.css
@@ -1,30 +1,30 @@
-.cpass-wrapper{
+.cpassWrapper {
     display: flex;
     align-items: center;
     margin-top: 40px;
     gap: 100px;
 }
 
-.cpass-img img{
+.cpassImg img {
     width: 400px;
 }
 
-form{
+.form {
     padding: 20px;
     width: 400px;
 }
 
-form h2{
+.form h2 {
     font-weight: 700;
 }
 
-.input-wrapper h3{
+.inputWrapper h3 {
     color: #676666;
     font-size: 16px;
     margin-top: 20px;
 }
 
-.input-wrapper input{
+.inputWrapper input {
     margin-bottom: 10px;
     border: none;
     border-bottom: 1px solid #ccc;
@@ -33,11 +33,11 @@ form h2{
     margin-top: 10px;
 }
 
-.input-wrapper input:focus{
+.inputWrapper input:focus {
     outline: none;
 }
 
-.btn-submit-cpass{
+.btnSubmitCpass {
     width: 150px;
     background-color: #db4444;
     border: none;
@@ -46,7 +46,7 @@ form h2{
     margin: 20px 0 40px;
 }
 
-.btn-submit-cpass:hover{
+.btnSubmitCpass:hover {
     cursor: pointer;
     background-color: #c63232;
 }
